fix(scss): Change custom property to sass varibales of z-index

--- a/src/assets/scss/object/components/_card.scss
+++ b/src/assets/scss/object/components/_card.scss
@@ -35,7 +35,7 @@
   position: absolute;
   bottom: 0;
   left: 0;
-  z-index: var(--z-index-card-number);
+  z-index: $z-index-card-number;
   display: inline-flex;
   align-items: center;
   justify-content: center;
